adding create, update, delete methods to complete the cruds
